added mvc structure

--- a/Views/Shared/LogIn.cshtml
+++ b/Views/Shared/LogIn.cshtml
@@ -176,10 +176,10 @@
 </style>
 
 
-<div class="login-container mx-auto col-md-7">
+<div class="login-container mx-auto col-md-5">
   <section class="login" id="login">
     <header>
-      <h2>Activity Center</h2>
+      <h2>eStore</h2>
       <h4>Login</h4>
     </header>
     @model LoginUser
