--- a/Views/User/NewUser.cshtml
+++ b/Views/User/NewUser.cshtml
@@ -166,10 +166,10 @@
 <div class="login-container mx-auto col-md-7">
 <section class="login" id="login">
     <header>
-      <h2>Activity Center</h2>
+      <h2>eStore</h2>
       <h4>Register below</h4>
     </header>
-  @model UserModel
+  @model User
   <form class="login-form" asp-controller="User" asp-action="CreateUser" method="POST">
     <div class="form-row">
       <div class="form-group col-6">
