--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <script src="https://kit.fontawesome.com/e2cd4330ca.js"></script>
+
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -18,39 +20,65 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">eStore</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <partial name="_CookieConsentPartial" />
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+  <header>
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
+      <div class="container">
+        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">eStore</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse d-sm-inline-flex">
+          @{
+            if(ViewBag.UserName != null)
+            {
+              <ul class="navbar-nav flex-grow-1">
+                <li class="nav-item">
+                  <a class="nav-link text-light" asp-area="" asp-controller="Activity" asp-action="NewActivity">Host Activity</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Instructions">Instructions</a>
+                </li>
+              </ul>;
+            }
+          }
+          <ul class="navbar-nav">
+            @{
+              if(ViewBag.UserName == null)
+              {
+                <li class="nav-item">
+                  <a class="nav-link text-light" asp-area="" asp-controller="User" asp-action="LogIn">Log In</a>
+                </li>;
+              }
+              else
+              {
+                <li class="nav-item">
+                  <a class="nav-link text-light">@ViewBag.UserName</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-light" asp-area="" asp-controller="User" asp-action="LogOut">Log Out</a>
+                </li>;
+              }
+            }
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2019 - eStore - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            
+          </ul>
         </div>
-    </footer>
+      </div>
+    </nav>
+  </header>
+  <div class="container">
+    <partial name="_CookieConsentPartial" />
+    <main role="main" class="pb-3">
+      @RenderBody()
+    </main>
+  </div>
+
+  <footer class="border-top footer text-muted">
+    <div class="container">
+      &copy; 2019 - eStore - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    </div>
+  </footer>
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
