--- a/Views/Shared/LogIn.cshtml
+++ b/Views/Shared/LogIn.cshtml
@@ -100,7 +100,6 @@
   position: relative;
   width: 100%;
   padding: 10px 5px;
-  margin: 0 0 25px 0;
   border: none;
   border-bottom: 2px solid rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
@@ -183,10 +182,11 @@
       <h4>Login</h4>
     </header>
     @model LoginUser
-    <form class="login-form" asp-controller="User" asp-action="LoginUser" method="POST">
+    <form class="login-form" asp-controller="User" asp-action="LoginPOST"  method="POST">
       <input type="text" class="login-input" placeholder="Email" asp-for="Email" autofocus/>
-      <input type="password" class="login-input" placeholder="Password" asp-for="Password"/>
       <span class="invalid-feedback d-block" asp-validation-for="Email"></span>
+      <input type="password" class="login-input" placeholder="Password" asp-for="Password"/>
+      <span class="invalid-feedback d-block" asp-validation-for="Password"></span>
       <div class="submit-container">
         <small class="signup-button text-muted">Don't have an account? <a class="text-primary" asp-action="NewUser">Sign Up Here</a></small>
         <button type="submit" class="login-button">SIGN IN</button>
@@ -194,3 +194,4 @@
     </form>
   </section>
 </div>
+
