--- a/Views/User/NewUser.cshtml
+++ b/Views/User/NewUser.cshtml
@@ -9,6 +9,7 @@
   flex-direction: column;
   align-items: center;
   position: relative;
+  margin-top: 50px;
   height: auto;
   padding: 5px;
   box-sizing: border-box;
@@ -122,7 +123,7 @@
 .submit-container {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;
   position: relative;
   padding: 10px;
   margin: 35px -25px -25px -25px;
@@ -142,6 +143,17 @@
   opacity: 1;
   animation: input_opacity 0.8s cubic-bezier(.55, 0, .1, 1);
   transition: background 0.2s ease-in-out;
+}
+
+.signup-button {
+  padding: 10px;
+  border: none;
+  border-radius: 3px;
+  background: transparent;
+  font-family: 'Roboto', sans-serif;
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: #343a40;
 }
 
 .login-button.raised {
@@ -209,7 +221,8 @@
       </div>
     </div>
     <div class="submit-container">
-      <button class="login-button" type="submit">Submit</button>
+      <small class="signup-button text-muted">Have an account? <a class="text-primary" asp-action="LogIn">Sign In Here</a></small>
+      <button class="login-button" type="submit">SUBMIT</button>
     </div>
   </form>
 </section>
