--- a/Views/Shared/LogIn.cshtml
+++ b/Views/Shared/LogIn.cshtml
@@ -9,6 +9,7 @@
   flex-direction: column;
   align-items: center;
   position: relative;
+  margin-top: 50px;
   height: auto;
   padding: 5px;
   box-sizing: border-box;
