--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,8 +21,11 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
+  @{
+  if(ViewBag.UserName != null)
+  {
   <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark box-shadow mb-0">
       <div class="container">
         <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">eStore</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -34,12 +37,12 @@
             if(ViewBag.UserName != null)
             {
               <ul class="navbar-nav flex-grow-1">
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a class="nav-link text-light" asp-area="" asp-controller="" asp-action="">Sell</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-light" asp-area="" asp-controller="" asp-action="">Orders</a>
-                </li>
+                </li> -->
               </ul>;
             }
           }
@@ -47,9 +50,9 @@
             @{
               if(ViewBag.UserName == null)
               {
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a class="nav-link text-light" asp-area="" asp-controller="User" asp-action="LogIn">Log In</a>
-                </li>;
+                </li>; -->
               }
               else
               {
@@ -58,10 +61,9 @@
                     @ViewBag.UserName
                   </a>
                   <div class="dropdown-menu shadow" aria-labelledby="navbarDropdownMenuLink">
-                    <div class="dropdown-item jumbotron p-1">
-                      @ViewBag.UserName
-                    </div>
+                    
                     <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Account">Account Settings</a>
+                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item text-danger" asp-area="" asp-controller="User" asp-action="LogOut">Sign Out</a>
                   </div>
                 </li>
@@ -81,19 +83,21 @@
         </div>
       </div>
     </nav>
-  </header>
-  <div class="container">
+  </header>;
+  }
+  }
+  <!-- <div class="container"> -->
     <partial name="_CookieConsentPartial" />
     <main role="main" class="pb-3">
       @RenderBody()
     </main>
-  </div>
+  <!-- </div> -->
 
-  <footer class="border-top footer text-muted">
+  <!-- <footer class="border-top footer text-muted">
     <div class="container">
       &copy; 2019 - eStore - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
     </div>
-  </footer>
+  </footer> -->
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
