--- a/Views/Shared/LogIn.cshtml
+++ b/Views/Shared/LogIn.cshtml
@@ -3,6 +3,9 @@
 }
 
 <style>
+html, body {
+  background-color: #343a40;
+}
   /* Login Form */
 .login-container {
   display: flex;
@@ -176,7 +179,7 @@
 </style>
 
 
-<div class="login-container mx-auto col-md-5">
+<div class="login-container mx-auto col-sm-9 col-md-5 col-lg-5 col-xl-4">
   <section class="login" id="login">
     <header>
       <h2>eStore</h2>
