--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,126 +1,103 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - eStore</title>
-
-    <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <script src="https://kit.fontawesome.com/e2cd4330ca.js"></script>
-
-    </environment>
-    <environment exclude="Development">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
-              crossorigin="anonymous"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"/>
-        <script src="https://kit.fontawesome.com/e2cd4330ca.js"></script>        
-    </environment>
-    <link rel="stylesheet" href="~/css/site.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>@ViewData["Title"] - eStore</title>
+  <environment include="Development">
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <script src="https://kit.fontawesome.com/e2cd4330ca.js"></script>
+  </environment>
+  <environment exclude="Development">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+          asp-fallback-test-class="sr-only" asp-fallback-test-property="position" 
+          asp-fallback-test-value="absolute" crossorigin="anonymous"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"/>
+    <script src="https://kit.fontawesome.com/e2cd4330ca.js"></script>
+  </environment>
+  <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-  @{
+@{
   if(ViewBag.UserName != null)
   {
   <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark box-shadow mb-0">
       <div class="container">
         <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">eStore</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+        <button class="navbar-toggler" type="button" data-toggle="collapse" 
+                data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse collapse d-sm-inline-flex">
           @{
             if(ViewBag.UserName != null)
             {
-              <ul class="navbar-nav flex-grow-1">
-                <!-- <li class="nav-item">
-                  <a class="nav-link text-light" asp-area="" asp-controller="" asp-action="">Sell</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-light" asp-area="" asp-controller="" asp-action="">Orders</a>
-                </li> -->
-              </ul>;
+              <ul class="navbar-nav flex-grow-1"></ul>;
             }
           }
           <ul class="navbar-nav">
-            @{
-              if(ViewBag.UserName == null)
-              {
-                <!-- <li class="nav-item">
-                  <a class="nav-link text-light" asp-area="" asp-controller="User" asp-action="LogIn">Log In</a>
-                </li>; -->
-              }
-              else
-              {
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    @ViewBag.UserName
-                  </a>
-                  <div class="dropdown-menu shadow" aria-labelledby="navbarDropdownMenuLink">
-                    
-                    <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Account">Account Settings</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item text-danger" asp-area="" asp-controller="User" asp-action="LogOut">Sign Out</a>
-                  </div>
-                </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdownMenuLink" 
+                 role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                 @ViewBag.UserName
+              </a>
+              <div class="dropdown-menu shadow" aria-labelledby="navbarDropdownMenuLink">
                 
-                <li class="nav-item">
-                  <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="far fa-comments mr-1"></i><span class="text-danger">2</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="fas fa-shopping-cart mr-1"></i><span class="text-warning">2</span></a>
-                </li>
-              }
-            }
-
+                <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Account">Account Settings</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item text-danger" asp-area="" asp-controller="User" asp-action="LogOut">Sign Out</a>
+              </div>
+            </li>
             
-          </ul>
-          
+            <li class="nav-item">
+              <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="far fa-comments mr-1"></i><span class="text-danger">2</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="fas fa-shopping-cart mr-1"></i><span class="text-warning">2</span></a>
+            </li>
+          </ul>  
         </div>
       </div>
     </nav>
   </header>;
   }
-  }
-  <!-- <div class="container"> -->
-    <partial name="_CookieConsentPartial" />
-    <main role="main" class="pb-3">
-      @RenderBody()
-    </main>
-  <!-- </div> -->
+}
+  <partial name="_CookieConsentPartial" />
+  <main role="main" class="pb-3">
+    @RenderBody()
+  </main>
 
-  <!-- <footer class="border-top footer text-muted">
-    <div class="container">
-      &copy; 2019 - eStore - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-    </div>
-  </footer> -->
+<!-- <footer class="border-top footer text-muted">
+  <div class="container">
+    &copy; 2019 - eStore - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+  </div>
+</footer> -->
 
-    <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    </environment>
-    <environment exclude="Development">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=">
-        </script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o">
-        </script>
-    </environment>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+  <environment include="Development">
+      <script src="~/lib/jquery/dist/jquery.js"></script>
+      <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+  </environment>
+  <environment exclude="Development">
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+              asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+              asp-fallback-test="window.jQuery"
+              crossorigin="anonymous"
+              integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=">
+      </script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
+              asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"
+              asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
+              crossorigin="anonymous"
+              integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o">
+      </script>
+  </environment>
+  <script src="~/js/site.js" asp-append-version="true"></script>
+  <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+  <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
-    @RenderSection("Scripts", required: false)
+  @RenderSection("Scripts", required: false)
 </body>
 </html>
