--- a/Views/Product/Sell.cshtml
+++ b/Views/Product/Sell.cshtml
@@ -3,50 +3,136 @@
 }
 
 <style>
-  .jumbotron{
-    border-radius: 0;
-    padding: .75rem;
-  }
+.jumbotron{
+  border-radius: 0;
+  padding: .75rem;
+}
 </style>
 
-<!-- @model Product -->
+@model Product
 
-<div class="container">
+<div class="container mt-3">
+  <form asp-controller="Product" asp-action="NewProduct UploadImages" method="POST">
+
+  <input type="hidden" asp-for="SellerId" value="@ViewBag.UserId">
 
   <div class="jumbotron border mb-0">
     <div class="form-group">
-      <label></label>
-      <input class="form-control" type="text"/>
+      <label asp-for="Title"></label>
+      <input class="form-control" type="text" asp-for="Title"/>
+      <span class="invalid-feedback d-block" asp-validation-for="Title"></span>
     </div>
   </div>
 
   <div class="jumbotron border mb-0">
-    <div class="form-group">
-      <label></label>
-      <input class="form-control" type="text"/>
+    <div class="form-group" id="imageFields">
+      <label>Images</label>
+      <input class="form-control" type="text" asp-for="ImageURLs"/>
     </div>
+    <button class="btn btn-outline-primary btn-sm" onclick="addImage()">Add More Images</button>
   </div>
 
   <div class="jumbotron border mb-0">
+
     <div class="form-group">
       <label>Details</label>
-      <input class="form-control" type="text"/>
+      <div class="d-flex justify-content-around">
+        <select class="custom-select col-sm-3" type="text" asp-for="CategoryId" asp-items="@(new SelectList(ViewBag.AllCategories,"CategoryId","Name"))">
+          <option>Choose Category ...</option>
+        </select>
+        
+        <select class="custom-select col-sm-3" asp-for="Condition">
+          <option value="">Specify Condition ...</option>        
+          <option>New</option>
+          <option>Used</option>
+        </select>
+      </div>
+      <div class="d-flex justify-content-around">
+        <input class="form-control col-sm-3" type="text" asp-for="Model" placeholder="Model"/>
+        <input class="form-control col-sm-3" type="text" asp-for="Brand" placeholder="Brand"/>
+      </div>
     </div>
   </div>
 
   <div class="jumbotron border">
     <div class="form-group">
-      <label></label>
-      <input class="form-control" type="text"/>
+      <label asp-for="Description"></label>
+      <textarea class="form-control" rows="4" asp-for="Description"></textarea>
     </div>
   </div>
 
   <div class="jumbotron border">
-    <div class="form-group">
-      <label></label>
-      <input class="form-control" type="text"/>
+    <h5>Pricing</h5>
+    <div class="form-row">
+
+      <div class="col-sm-6">
+        <div class="custom-control custom-switch">
+          <input type="checkbox" class="custom-control-input" id="AuctionSwitch">
+          <label class="custom-control-label" for="AuctionSwitch">Start Auction</label>
+        </div>
+
+        <label asp-for="BidStartPrice"></label>
+
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text">$</span>
+            <span class="input-group-text">0.00</span>
+          </div>
+          <input type="text" class="form-control" aria-label="Dollar amount (with dot and two decimal places)" asp-for="BidStartPrice">
+        </div>
+
+        <label asp-for="AuctionDuration"></label>
+        <select class="custom-select" asp-for="AuctionDuration">
+          <option value="1">1 Day</option>
+          <option value="3">3 Days</option>
+          <option value="5">5 Days</option>
+          <option value="7" selected>7 Days</option>
+          <option value="10">10 Days</option>
+        </select>
+      </div><!--End of First Col-->
+
+      <div class="col-sm-6">
+        <div class="custom-control custom-switch">
+          <input type="checkbox" class="custom-control-input" id="FixedSwitch">
+          <label class="custom-control-label" for="FixedSwitch">Fixed Pricing</label>
+        </div>
+
+        <label asp-for="Price"></label>
+
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text">$</span>
+            <span class="input-group-text">0.00</span>
+          </div>
+          <input type="text" class="form-control" aria-label="Dollar amount (with dot and two decimal places)" asp-for="Price">
+        </div>
+
+        <label asp-for="SaleDuration"></label>
+        <select class="custom-select" asp-for="SaleDuration">
+          <option value="7">7 Days</option>
+          <option value="10">10 Days</option>
+          <option value="15">15 Days</option>
+          <option value="20">20 Days</option>
+          <option value="30" selected>30 Days</option>
+        </select>
+      </div><!--End of Second Col-->
+
     </div>
   </div>
 
+  <button class="btn btn-primary float-right" type="subit">List Item</button>
 
+</form>
 </div>
+
+@section Scripts
+{
+  <script>
+    function addImage(){
+      $('#imageFields').append('<input class="form-control" type="text" asp-for="ImageURLs"/>');
+    }
+
+
+
+  </script>
+}
