--- a/Views/Product/Store.cshtml
+++ b/Views/Product/Store.cshtml
@@ -30,20 +30,31 @@
   </form>
 </div>
 <div class="container">
-
-  <div class="card mb-3 w-50">
-    <div class="row no-gutters">
-      <div class="col-md-4">
-        <img src="..." class="card-img" alt="...">
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
-      </div>
+  <div class="row mx-0 mt-3">
+    <div class="col-md-3">
+      
+    </div>
+    <div class="col-md-9">
+    @{
+      foreach(Product Product in ViewBag.AllProducts)
+      {
+        var photoPath = "~/images/" + (Product.ImagePath ?? "noimage.png");
+        <div class="card mb-3 w-100"\>
+          <div class="row no-gutters">
+            <div class="col-md-3">
+              <img src="@photoPath" asp-append-version="true" class="card-img" alt="...">
+            </div>
+            <div class="col-md-9">
+              <div class="card-body">
+                <h5 class="card-title">@Product.Title</h5>
+                <p class="card-text">@Product.Description</p>
+                <p class="card-text"><small class="text-muted">@Product.TimeDiffUpdate()</small></p>
+              </div>
+            </div>
+          </div>
+        </div>;
+      }
+    }
     </div>
   </div>
-
 </div>
