--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -53,10 +53,10 @@
             </li>
             
             <li class="nav-item">
-              <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="far fa-comments mr-1"></i><span class="text-danger">2</span></a>
+              <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="far fa-comments mr-1"></i><span class="badge badge-warning badge-pill">14</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="fas fa-shopping-cart mr-1"></i><span class="text-warning">2</span></a>
+              <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="fas fa-shopping-cart mr-1"></i><span class="badge badge-success badge-pill">3</span></a>
             </li>
           </ul>  
         </div>
