--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,12 +16,9 @@ textarea {
 <div class="bg-primary py-4">
   <form class="col-11 col-md-6 mx-auto shadow-lg px-0 rounded">
     <div class="input-group">
-      <!-- <select class="input-group-append border bg-dark text-light rounded">
-        <option selected>All</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
-      </select> -->
+      <select class="input-group-append border" asp-items="@(new SelectList(ViewBag.AllCategories,"Id","Name"))">
+        <option value="0">All</option>
+      </select>
       <textarea class="form-control form-control-lg" id="validationDefaultUsername" rows="1" placeholder="Search"></textarea>
       <div class="input-group-append">
         <button class="btn btn-warning" type="button"><i class="fas fa-search"></i></button>
@@ -37,22 +34,21 @@ textarea {
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
   </ol>
   <div class="carousel-inner">
 
     <div class="carousel-item active">
-      <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: First slide">
-        <title>Placeholder</title>
-        <rect width="100%" height="100%" fill="#dee2e6"></rect>
-        <text x="50%" y="50%" fill="#555" dy=".3em">First slide</text>
-      </svg>
-    </div>
-    
-    <div class="carousel-item">
-      <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: First slide"><title>Placeholder</title><rect width="100%" height="100%" fill="#dee2e6"></rect><text x="50%" y="50%" fill="#555" dy=".3em">Second slide</text></svg>
+      <img class="img-fluid" src="//placehold.it/1950X400.png?text=Ad 1 Here" style="height: 400px;" alt="Image result for landscape images">
     </div>
     <div class="carousel-item">
-      <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: First slide"><title>Placeholder</title><rect width="100%" height="100%" fill="#dee2e6"></rect><text x="50%" y="50%" fill="#555" dy=".3em">Third slide</text></svg>
+      <img class="img-fluid" src="//placehold.it/1950X400.png?text=Ad 2 Here" style="height: 400px;" alt="Image result for landscape images">
+    </div>
+    <div class="carousel-item">
+      <img class="img-fluid" src="//placehold.it/1950X400.png?text=Ad 3 Here" style="height: 400px;" alt="Image result for landscape images">
+    </div>
+    <div class="carousel-item">
+      <img class="img-fluid" src="//placehold.it/1950X400.png?text=Ad 4 Here" style="height: 400px;" alt="Image result for landscape images">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
